 <resources>
     <string name="URL">http://10.24.226.237:8080/</string>
     <string name="package_name">com.example.fud</string>
    <string name="app_name">FUD</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
     <string name="usrname">Username</string>
     <string name="usrset">User Settings</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
    <string name="pswrd">Password</string>
     <string name="register">Register</string>
     <string name="recipe">Recipe</string>
     <string name="search">Search</string>
     <string name="search_recipe">enter recipe name</string>
     <string name="search_item">enter recipe ingredients</string>
     <string name="recipe_lookup">Lookup Recipe by name</string>
     <string name="item_lookup">Lookup Recipe by Ingredients</string>
     <string name="change">Change</string>
     <string name="cancel">Cancel</string>
     <string name="pantry">Pantry</string>
     <string name="meats">Meats</string>
     <string name="vegetables">Vegetables</string>
     <string name="dairy">Dairy</string>
     <string name="fruits">Fruits</string>
     <string name="other">Other</string>
     <string name="grocery_list">Grocery List</string>
     <string name="confirm_pswrd">Confirm Password</string>
     <string name="change_pswrd">Change Password</string>
     <string name="new_pswrd">New Password</string>
     <string name="new_confirm">Confirm New Password</string>
     <string name="household">Household</string>
     <string name="join_house">Join Household</string>
     <string name="del_house">Leave Household</string>
     <string name="create_house">Create Household</string>
     <string name="firstname">First Name</string>
     <string name="unsuccessful">Login Unsuccessful</string>
     <string name="lastname">Last Name</string>
     <string name="dark">Dark Display Mode</string>
     <string name="notifications">In App Notifications</string>
    <string name="string">String Request</string>
     <string name="add">Add</string>
     <string name="enter_item">enter new item</string>
     <string name="delete_sel">Delete Selected</string>
     <string name="house_success">Household was added successfully</string>
     <string name="house_left">Left household successfully</string>
     <string name="house_not_left">Could not leave household</string>
     <string name="house_name">Enter Household Name</string>
     <string name="house_pin">Enter 6-digit Household Pin</string>
     <string name="new_pantry_entry">new pantry item</string>
     <string name="new_shared_entry">new shared item</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="register_prompt">Don\'t have an account? Click here to register</string>
     <string name="error_register">All fields must be complete to register</string>
     <string name="error_login">All fields must be complete to login</string>
     <string name="error_field">All fields must be complete</string>
     <string name="error_match">Passwords do not match</string>
     <string name="error_valid">Incorrect username or password</string>
     <string name="error_join_house">Household cannot be joined</string>
     <string name="error_create_house">Household was not created</string>
    <string name="write_message">Write a message</string>
    <string name="chat">Chat</string>
     <string name="expiration">expiration date</string>
     <string name="quantity">quantity</string>
     <string name="welcome">Welcome,</string>
     <string name="your_house">Your House: </string>
     <string name="household_pin">Your Household Pin:</string>
     <string name="connect">Connect</string>
     <string name="chatroom">Chatroom</string>
     <string name="generate">Generate Household Pin</string>
     <string name="pin_success">Household Pin generated successfully</string>
     <string name="pin_failure">Household Pin could not be generated</string>
     <string name="ok">Ok</string>
</resources>
