<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragments.RecipeFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/recipe"
            android:textColor="@color/text"
            android:textSize="36sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/lookup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/recipe_lookup"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10sp">

            <EditText
                android:id="@+id/lookup_recipe"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search_recipe"
                android:paddingLeft="30dp"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight=".5"
                android:background="@color/colorAccent"
                android:text="@string/search"
                android:textColor="@color/dark_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/lookup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/item_lookup"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10sp">

            <EditText
                android:id="@+id/lookup_item"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search_item"
                android:paddingLeft="30dp"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/search_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight=".5"
                android:background="@color/colorAccent"
                android:text="@string/search"
                android:textColor="@color/dark_text" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@color/colorAccent"
                android:onClick="onDeleteClicked"
                android:text="@string/delete_sel"
                android:textColor="@color/dark_text" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>