<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/change_pswrd"
            android:textAlignment="center"
            android:textColor="@color/dark_text"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/new_pass_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/new_pswrd"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/confirm_new_pass_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/new_confirm"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/medium_text"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:background="@color/colorAccent"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

            <Button
                android:id="@+id/change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:background="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>