<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorAccent"
        android:elevation="4dp"
        app:popupTheme="@style/ToolBarStyle"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="FUD"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:hint="@string/usrname"
        android:paddingLeft="25dp"
        android:textSize="24sp" />
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:hint="@string/pswrd"
        android:inputType="textPassword"
        android:paddingLeft="25dp"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/dark_text"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:text="@string/register_prompt"
        android:textColor="@color/text"
        android:textSize="18sp" />

</LinearLayout>