<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragments.ChatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/chat"
            android:textColor="@color/text"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/chatroom_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/chatroom"
                android:inputType="textPersonName"
                android:paddingLeft="25dp"
                android:textColor="@color/text"
                android:textColorHint="@color/medium_text"
                android:textSize="25sp" />

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/connect"
                android:textColor="@color/dark_text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/user_joined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/medium_text"
            android:textSize="18dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/message_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">


            <EditText
                android:id="@+id/message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/write_message"
                android:inputType="textPersonName"
                android:paddingLeft="25dp"
                android:textColor="@color/text"
                android:textColorHint="@color/medium_text"
                android:textSize="25sp" />


            <ImageButton
                android:id="@+id/send_message_button"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="bottom|left"
                android:onClick="onSendClicked"
                android:background="@drawable/ic_send_message" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>